--- a/lovelace/00_home_modern/group_geotime.yaml
+++ b/lovelace/00_home_modern/group_geotime.yaml
@@ -8,8 +8,7 @@
     - state:
         - color: "#BAC0C6"
           icon: "mdi:home"
-          operator: =>
-          value: 0
+          operator: default
 - template: nest_button
   type: "custom:decluttering-card"
   variables:
@@ -20,12 +19,7 @@
     - state:
         - color: "#BAC0C6"
           icon: "mdi:briefcase"
-          operator: <=
-          value: 9
-        - color: "#EC7B2C"
-          icon: "mdi:briefcase"
-          operator: ">"
-          value: 9
+          operator: default
 - template: nest_button
   type: "custom:decluttering-card"
   variables:
@@ -36,9 +30,4 @@
     - state:
         - color: "#BAC0C6"
           icon: "mdi:walk"
-          operator: <=
-          value: 9
-        - color: "#EC7B2C"
-          icon: "mdi:walk"
-          operator: ">"
-          value: 9
+          operator: default
