--- a/lovelace/00_home_modern.yaml
+++ b/lovelace/00_home_modern.yaml
@@ -23,11 +23,11 @@ cards:
                 cards:
                   - type: markdown
                     content: |
-                      # Benvingut a casa
+                      # Benvingut a casa,
                     style: |
                       ha-card {
                         margin-top: 30px;
-                        margin-bottom: 50px;
+                        margin-left: 10px;
                         font-family: 'Open Sans', sans-serif;
                         font-size: 100%;
                         -webkit-box-shadow: none;
