--- a/themes/nest.yaml
+++ b/themes/nest.yaml
@@ -1,11 +1,13 @@
 nest:
+  background-image: 'center / cover no-repeat url("/local/background.jpg") fixed'
+
   # Card-Specific Modifications
   ha-card-box-shadow: "10px 10px 17px -8px #A9A9A9" # Shadows on cards. Same as `shadow-elevation-2dp_-_box-shadow:
   ha-card-border-radius: "10px" # Rounded corners on cards. NOTE: may not work with custom cards.
   # ha-card-background: # Defines the background for cards.
-  
+
   # Fonts
-  primary-font-family: 'Open Sans,sans-serif'
+  primary-font-family: "Open Sans,sans-serif"
   paper-font-common-base_-_font-family: "var(--primary-font-family)"
   paper-font-common-code_-_font-family: "var(--primary-font-family)"
   paper-font-body1_-_font-family: "var(--primary-font-family)"
@@ -36,16 +38,16 @@ nest:
   # paper-font-display4...
   # app-toolbar-font-size: # 14px
   # app-drawer-font-size: # 14px
-  
+
   # Colors
   # primary-text-color: # `|`'#FFFFFF' CSS color value for the color to be used.
-  text-primary-color: '#FFF'
+  text-primary-color: "#FFF"
   primary-color: "#636B75"
   secondary-text-color: "#5f6368"
-  text-light-color: '#BAC0C6' 
+  text-light-color: "#BAC0C6"
   # disabled-text-color:
-  text-medium-color: '#8c96a5'
-  paper-item-icon-color: 'var(--text-light-color)'  
+  text-medium-color: "#8c96a5"
+  paper-item-icon-color: "var(--text-light-color)"
   # accent-color:
   # accent-medium-color:
   # background-color:
@@ -64,31 +66,28 @@ nest:
   # alarm-color-triggered:
   # alarm-color-armed:
   # alarm-color-autoarm:
-  # alarm-state-color: 
+  # alarm-state-color:
   # state-icon-unavailable-color:
   # dark-primary-opacity:
   # dark-secondary-opacity:
   # dark-disabled-opacity:
   # paper-listbox-color: # CSS color value, ie. `redColor of the overall text of the popup menues (such as "3 dot menu" and background of hovered icon (in a lighter shade of the same color)
   # Header
-  
   # Left Menu
-  
   # paper-listbox-background-color: # `|CSS color value, ie. `redColor of the background of the left sidebar menu.
-  # paper-listbox_-_font-family: # |Roboto, sans serif | |Font used for the left sidebar menu. 
+  # paper-listbox_-_font-family: # |Roboto, sans serif | |Font used for the left sidebar menu.
   # sidebar-icon-color: # `|CSS color value, ie. `redColor for the icons in the left sidebar menu.
-  # sidebar-selected-icon-color: # `|CSS color value, ie. `redColor for the currently selected icon in the left sidebar menu. 
+  # sidebar-selected-icon-color: # `|CSS color value, ie. `redColor for the currently selected icon in the left sidebar menu.
   # sidebar-selected-text-color: # `|CSS color value, ie. `redColor for the text of the currently selected menu item in the left sidebar menu.
   # sidebar-text_-_background: # `|CSS color value, ie. `red
   # primary-background-color: # color of the sidebar headers background (space behind the text "Home Assistant" and your Avatar)
   # # Card Elements
-  
   # paper-card-header-color:
   # paper-card-background-color: # background of the cards
   # paper-dialog-background-color: # background color of dialogs that appear when clicking on a entity
-  # paper-dialog-color: # text color of dialogs that appear when clicking on a entity 
+  # paper-dialog-color: # text color of dialogs that appear when clicking on a entity
   # paper-item-icon-color: # color of entities icons when off,
-  # paper-item-icon-active-color: # color of entities icons when on, gets overriden by lights color if available 
+  # paper-item-icon-active-color: # color of entities icons when on, gets overriden by lights color if available
   # paper-item-icon_-_color:
   # paper-item-selected_-_background-color:
   # paper-menu-button-dropdown-background:
@@ -100,13 +99,12 @@ nest:
   # paper-slider-active-color: # Color of the part of the slider which is active.
   # paper-slider-secondary-color:
   # paper-slider-disabled-active-color:
-  # paper-toggle-button-checked-button-color: # CSS color value, ie. `redColor of the button for an on/off toggle when turned on. 
+  # paper-toggle-button-checked-button-color: # CSS color value, ie. `redColor of the button for an on/off toggle when turned on.
   # paper-toggle-button-checked-bar-color: # CSS color value, ie. `redColor of the sliding area for an on/off toggle when turned on.
   # paper-toggle-button-checked-ink-color:
-  # paper-toggle-button-unchecked-button-color: # CSS color value, ie. `redColor of the button for an on/off toggle when turned off. 
-  # paper-toggle-button-unchecked-bar-color: # CSS color value, ie. `redColor of the sliding area for an on/off toggle when turned off. 
+  # paper-toggle-button-unchecked-button-color: # CSS color value, ie. `redColor of the button for an on/off toggle when turned off.
+  # paper-toggle-button-unchecked-bar-color: # CSS color value, ie. `redColor of the sliding area for an on/off toggle when turned off.
   # paper-toggle-button-unchecked-ink-color:
-  
   # # Shadows
   # mo-box-shadow-s:
   # mo-box-shadow-m:
@@ -129,17 +127,16 @@ nest:
   # shadow-elevation-16dp_-_box-shadow:
   # shadow-elevation-24dp_-_box-shadow:
   # shadow-transition_-_transition:
-  
   # ## Uncategorized - Need to Update
   # label-badge-border-color:
   # paper-grey-50:
   # paper-grey-200:
   # paper-progress-height:
-  # ha-label-badge-color: 
+  # ha-label-badge-color:
   # label-badge-red:
   # label-badge-text-color:
   # label-badge-background-color:
   # google-red-500:
   # google-green-500:
-  # mdc-theme-primary: # 0.88|# Related to the new mwc-card/buttons somehow.  
+  # mdc-theme-primary: # 0.88|# Related to the new mwc-card/buttons somehow.
   # base-unit:
