--- a/lovelace/00_home_modern/group_bulbs.yaml
+++ b/lovelace/00_home_modern/group_bulbs.yaml
@@ -1,127 +1,131 @@
-- show_name: true
-  template: nest_button
-  type: "custom:decluttering-card"
-  variables:
+- type: horizontal-stack
+  cards:
     - show_name: true
-    - show_state: false
-    - name: Taula
-    - entity: light.mesa
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:ceiling-light"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:ceiling-light"
-          value: "on"
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Sofà
-    - entity: light.sofa
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:floor-lamp"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:floor-lamp"
-          value: "on"
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Tele
-    - entity: light.detras_de_la_tele
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:lightbulb"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:lightbulb"
-          value: "on"
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Ventilador
-    - entity: switch.ventilador
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:fan-off"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:fan"
-          value: "on"
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Tele
-    - entity: media_player.tele
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:television-classic"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:television-classic"
-          value: playing
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Calefacció
-    - entity: switch.calefaccio_dormitori
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:radiator"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:radiator"
-          value: "on"
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Tele
-    - entity: media_player.el_lado_oscuro
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:television-classic"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:television-classic"
-          value: playing
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Cuina
-    - entity: light.kitchen_light
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:lightbulb"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:lightbulb"
-          value: "on"
-- template: nest_button
-  type: "custom:decluttering-card"
-  variables:
-    - show_name: true
-    - show_state: false
-    - name: Entrada
-    - entity: light.entrada
-    - state:
-        - color: "#BAC0C6"
-          icon: "mdi:lightbulb"
-          value: "off"
-        - color: "rgb(251, 210, 41)"
-          icon: "mdi:lightbulb"
-          value: "on"
+      template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Taula
+        - entity: light.mesa
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:ceiling-light"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:ceiling-light"
+              value: "on"
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Sofà
+        - entity: light.sofa
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:floor-lamp"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:floor-lamp"
+              value: "on"
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Tele
+        - entity: light.detras_de_la_tele
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:lightbulb"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:lightbulb"
+              value: "on"
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Ventilador
+        - entity: switch.ventilador
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:fan-off"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:fan"
+              value: "on"
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Tele
+        - entity: media_player.tele
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:television-classic"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:television-classic"
+              value: playing
+- type: horizontal-stack
+  cards:
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Calefacció
+        - entity: switch.calefaccio_dormitori
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:radiator"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:radiator"
+              value: "on"
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Tele
+        - entity: media_player.el_lado_oscuro
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:television-classic"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:television-classic"
+              value: playing
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Cuina
+        - entity: light.kitchen_light
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:lightbulb"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:lightbulb"
+              value: "on"
+    - template: nest_button
+      type: "custom:decluttering-card"
+      variables:
+        - show_name: true
+        - show_state: false
+        - name: Entrada
+        - entity: light.entrada
+        - state:
+            - color: "#BAC0C6"
+              icon: "mdi:lightbulb"
+              value: "off"
+            - color: "rgb(251, 210, 41)"
+              icon: "mdi:lightbulb"
+              value: "on"
