--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -122,6 +122,7 @@ decluttering_templates:
           -webkit-box-shadow: none;
           -moz-box-shadow: none;
           box-shadow: none;
+          margin-bottom: 30px;
         }
         ha-icon {
           width: 60% !important;
