--- a/lovelace/00_home_modern/group_categories.yaml
+++ b/lovelace/00_home_modern/group_categories.yaml
@@ -84,7 +84,7 @@
     - name: Activitat
     - entity: input_text.selected_category
     - state:
-        - color: "#BAC0C6"
+        - color: "#BEFFC0"
           icon: "mdi:walk"
           operator: default
     - tap_action:
