--- a/configuration.yaml
+++ b/configuration.yaml
@@ -6,7 +6,7 @@ homeassistant:
   longitude: !secret longitude
   elevation: 102
   unit_system: metric
-  time_zone: CEST
+  time_zone: Europe/Madrid
   # customize: !include customize.yaml
   whitelist_external_dirs:
     - /tmp/
