--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,8 @@ homeassistant:
 
 logger:
   default: info
+  logs:
+    custom_components.beewi_smartclim.sensor: debug
 
 config:
 
@@ -58,9 +60,9 @@ alarm_control_panel:
     name: home
     code: 1234
 
-google:
-  client_id: !secret google_oauth_calendar_id
-  client_secret: !secret google_oauth_calendar_secret
+#google:
+#  client_id: !secret google_oauth_calendar_id
+#  client_secret: !secret google_oauth_calendar_secret
 
 # Notifications
 
