--- a/lovelace/00_home_modern/group_geotime.yaml
+++ b/lovelace/00_home_modern/group_geotime.yaml
@@ -23,11 +23,60 @@
 - template: nest_button
   type: "custom:decluttering-card"
   variables:
-    - show_name: true
+    - show_name: false
     - show_last_changed: false
-    - name: Fora
-    - entity: sensor.time_other
+    - name: V25 Casa
+    - entity: sensor.v25_v25_1051_1051
     - state:
         - color: "#BAC0C6"
-          icon: "mdi:walk"
+          icon: "mdi:bus-stop"
+          operator: default
+- template: nest_button
+  type: "custom:decluttering-card"
+  variables:
+    - show_name: false
+    - show_last_changed: false
+    - name: V25 Feina
+    - entity: sensor.v25_v25_3258_3258
+    - state:
+        - color: "#BAC0C6"
+          icon: "mdi:bus-stop"
+          operator: default
+- template: nest_button
+  type: "custom:decluttering-card"
+  variables:
+    - show_name: false
+    - show_last_changed: false
+    - name: Cotxe
+    - entity: sensor.google_travel_time_driving
+    - state:
+        - color: "#B2FE93"
+          icon: "mdi:car"
+          operator: <
+          value: 25
+        - color: "#EEFE93"
+          icon: "mdi:car"
+          operator: "<"
+          value: 30
+        - color: "#FECC93"
+          icon: "mdi:car"
+          operator: default
+- template: nest_button
+  type: "custom:decluttering-card"
+  variables:
+    - show_name: false
+    - show_last_changed: false
+    - name: Cotxe
+    - entity: sensor.google_travel_time_transit
+    - state:
+        - color: "#B2FE93"
+          icon: "mdi:bus-side"
+          operator: <
+          value: 35
+        - color: "#EEFE93"
+          icon: "mdi:bus-side"
+          operator: "<"
+          value: 40
+        - color: "#FECC93"
+          icon: "mdi:bus-side"
           operator: default
